--- a/index.html
+++ b/index.html
@@ -180,10 +180,10 @@
         .btn:active { transform: scale(0.92); }
 
         /* Mobile Viewports */
-        @media (max-width: 440px) {
+       /* @media (max-width: 440px) {
             .top-rates-grid { grid-template-columns: 1fr; }
             .converter-card { padding: 24px 20px; }
-        }
+        } */
     </style>
 </head>
 <body>
