--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#ffffff">
     <meta name="apple-mobile-web-app-title" content="Currency">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="default">
+    <meta name="apple-mobile-web-app-status-bar-style" content="white">
 
     <title>Currency</title>
 
@@ -23,6 +23,10 @@
         rel="stylesheet">
 
     <style>
+        html {
+            background-color: #FFFFFF !important;
+        }
+
         :root {
             --bg-page: #FFFFFF;
             --bg-element: #F0F0F0;
