--- a/index.html
+++ b/index.html
@@ -22,6 +22,8 @@
     <link href="https://fonts.googleapis.com/css2?family=DM+Mono:wght@400&family=Doto:wght@500;600&display=swap"
         rel="stylesheet">
 
+    <link rel="manifest" href="manifest.json">
+
     <style>
         html {
             background-color: #FFFFFF !important;
